client/src/theme/variables.scss
// Ionic Variables and Theming. For more info, please see:
// http://ionicframework.com/docs/theming/

/** Ionic CSS Variables **/
:root {
  --ion-color-primary: #2D333A;
  --ion-color-primary-rgb: 45,51,58;
  --ion-color-primary-contrast: #ffffff;
  --ion-color-primary-contrast-rgb: 255,255,255;
  --ion-color-primary-shade: #282d33;
  --ion-color-primary-tint: #42474e;

  --ion-color-secondary: #a69b8d;
  --ion-color-secondary-rgb: 166,155,141;
  --ion-color-secondary-contrast: #222f38;
  --ion-color-secondary-contrast-rgb: 0,0,0;
  --ion-color-secondary-shade: #92887c;
  --ion-color-secondary-tint: #afa598;

  --ion-color-tertiary: #cda34f;
  --ion-color-tertiary-rgb: 205,163,79;
  --ion-color-tertiary-contrast: #222f38;
  --ion-color-tertiary-contrast-rgb: 0,0,0;
  --ion-color-tertiary-shade: #b48f46;
  --ion-color-tertiary-tint: #d2ac61;

  --ion-color-success: #069d8c;
  --ion-color-success-rgb: 6,157,140;
  --ion-color-success-contrast: #ffffff;
  --ion-color-success-contrast-rgb: 255,255,255;
  --ion-color-success-shade: #058a7b;
  --ion-color-success-tint: #1fa798;

  --ion-color-warning: #f08d34;
  --ion-color-warning-rgb: 240,141,52;
  --ion-color-warning-contrast: #000000;
  --ion-color-warning-contrast-rgb: 0,0,0;
  --ion-color-warning-shade: #d37c2e;
  --ion-color-warning-tint: #f29848;

  --ion-color-danger: #fb5832;
  --ion-color-danger-rgb: 251,88,50;
  --ion-color-danger-contrast: #000000;
  --ion-color-danger-contrast-rgb: 0,0,0;
  --ion-color-danger-shade: #dd4d2c;
  --ion-color-danger-tint: #fb6947;

  --ion-color-dark: #222f38;
  --ion-color-dark-rgb: 34,47,56;
  --ion-color-dark-contrast: #ffffff;
  --ion-color-dark-contrast-rgb: 255,255,255;
  --ion-color-dark-shade: #1e2931;
  --ion-color-dark-tint: #38444c;

  --ion-color-medium: #bbbcb6;
  --ion-color-medium-rgb: 187,188,182;
  --ion-color-medium-contrast: #000000;
  --ion-color-medium-contrast-rgb: 0,0,0;
  --ion-color-medium-shade: #a5a5a0;
  --ion-color-medium-tint: #c2c3bd;

  --ion-color-light: #fffafa;
  --ion-color-light-rgb: 255,250,250;
  --ion-color-light-contrast: #000000;
  --ion-color-light-contrast-rgb: 0,0,0;
  --ion-color-light-shade: #e0dcdc;
  --ion-color-light-tint: #fffbfb;
}

@media (prefers-color-scheme: dark) {
  /*
   * Dark Colors
   * -------------------------------------------
   */

  body {
    --ion-color-primary: #2D333A;
  --ion-color-primary-rgb: 45,51,58;
  --ion-color-primary-contrast: #ffffff;
  --ion-color-primary-contrast-rgb: 255,255,255;
  --ion-color-primary-shade: #282d33;
  --ion-color-primary-tint: #42474e;

  --ion-color-secondary: #a69b8d;
  --ion-color-secondary-rgb: 166,155,141;
  --ion-color-secondary-contrast: #222f38;
  --ion-color-secondary-contrast-rgb: 0,0,0;
  --ion-color-secondary-shade: #92887c;
  --ion-color-secondary-tint: #afa598;

  --ion-color-tertiary: #cda34f;
  --ion-color-tertiary-rgb: 205,163,79;
  --ion-color-tertiary-contrast: #222f38;
  --ion-color-tertiary-contrast-rgb: 0,0,0;
  --ion-color-tertiary-shade: #b48f46;
  --ion-color-tertiary-tint: #d2ac61;

  --ion-color-success: #069d8c;
  --ion-color-success-rgb: 6,157,140;
  --ion-color-success-contrast: #ffffff;
  --ion-color-success-contrast-rgb: 255,255,255;
  --ion-color-success-shade: #058a7b;
  --ion-color-success-tint: #1fa798;

  --ion-color-warning: #f08d34;
  --ion-color-warning-rgb: 240,141,52;
  --ion-color-warning-contrast: #000000;
  --ion-color-warning-contrast-rgb: 0,0,0;
  --ion-color-warning-shade: #d37c2e;
  --ion-color-warning-tint: #f29848;

  --ion-color-danger: #fb5832;
  --ion-color-danger-rgb: 251,88,50;
  --ion-color-danger-contrast: #000000;
  --ion-color-danger-contrast-rgb: 0,0,0;
  --ion-color-danger-shade: #dd4d2c;
  --ion-color-danger-tint: #fb6947;

  --ion-color-dark: #222f38;
  --ion-color-dark-rgb: 34,47,56;
  --ion-color-dark-contrast: #ffffff;
  --ion-color-dark-contrast-rgb: 255,255,255;
  --ion-color-dark-shade: #1e2931;
  --ion-color-dark-tint: #38444c;

  --ion-color-medium: #bbbcb6;
  --ion-color-medium-rgb: 187,188,182;
  --ion-color-medium-contrast: #000000;
  --ion-color-medium-contrast-rgb: 0,0,0;
  --ion-color-medium-shade: #a5a5a0;
  --ion-color-medium-tint: #c2c3bd;

  --ion-color-light: #fffafa;
  --ion-color-light-rgb: 255,250,250;
  --ion-color-light-contrast: #000000;
  --ion-color-light-contrast-rgb: 0,0,0;
  --ion-color-light-shade: #e0dcdc;
  --ion-color-light-tint: #fffbfb; 
  }

  /*
   * iOS Dark Theme
   * -------------------------------------------
   */

  .ios body {
    --ion-background-color: #000000;
    --ion-background-color-rgb: 0,0,0;

    --ion-text-color: #ffffff;
    --ion-text-color-rgb: 255,255,255;

    --ion-color-step-50: #0d0d0d;
    --ion-color-step-100: #1a1a1a;
    --ion-color-step-150: #262626;
    --ion-color-step-200: #333333;
    --ion-color-step-250: #404040;
    --ion-color-step-300: #4d4d4d;
    --ion-color-step-350: #595959;
    --ion-color-step-400: #666666;
    --ion-color-step-450: #737373;
    --ion-color-step-500: #808080;
    --ion-color-step-550: #8c8c8c;
    --ion-color-step-600: #999999;
    --ion-color-step-650: #a6a6a6;
    --ion-color-step-700: #b3b3b3;
    --ion-color-step-750: #bfbfbf;
    --ion-color-step-800: #cccccc;
    --ion-color-step-850: #d9d9d9;
    --ion-color-step-900: #e6e6e6;
    --ion-color-step-950: #f2f2f2;

    --ion-item-background: #000000;

    --ion-card-background: #1c1c1d;
  }

  .ios ion-modal {
    --ion-background-color: var(--ion-color-step-100);
    --ion-toolbar-background: var(--ion-color-step-150);
    --ion-toolbar-border-color: var(--ion-color-step-250);
  }


  /*
   * Material Design Dark Theme
   * -------------------------------------------
   */

  .md body {
    --ion-background-color: #121212;
    --ion-background-color-rgb: 18,18,18;

    --ion-text-color: #ffffff;
    --ion-text-color-rgb: 255,255,255;

    --ion-border-color: #222222;

    --ion-color-step-50: #1e1e1e;
    --ion-color-step-100: #2a2a2a;
    --ion-color-step-150: #363636;
    --ion-color-step-200: #414141;
    --ion-color-step-250: #4d4d4d;
    --ion-color-step-300: #595959;
    --ion-color-step-350: #656565;
    --ion-color-step-400: #717171;
    --ion-color-step-450: #7d7d7d;
    --ion-color-step-500: #898989;
    --ion-color-step-550: #949494;
    --ion-color-step-600: #a0a0a0;
    --ion-color-step-650: #acacac;
    --ion-color-step-700: #b8b8b8;
    --ion-color-step-750: #c4c4c4;
    --ion-color-step-800: #d0d0d0;
    --ion-color-step-850: #dbdbdb;
    --ion-color-step-900: #e7e7e7;
    --ion-color-step-950: #f3f3f3;

    --ion-item-background: #1e1e1e;

    --ion-toolbar-background: #1f1f1f;

    --ion-tab-bar-background: #1f1f1f;

    --ion-card-background: #1e1e1e;
  }
}

